--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Image generator for Project Sekai",
   "main": "./dist/index.js",
   "files": [
-    "dist"
+    "dist",
+	"assets"
   ],
   "types": "./dist/index.d.ts",
   "exports": {
