chore: update dependency

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "aamiaa",
   "dependencies": {
     "sekai-api": "github:aamiaa/sekai-api",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.3-rc.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.1"
