--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sekai-images",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Image generator for Project Sekai",
   "main": "./dist/index.js",
   "files": [
@@ -19,7 +19,7 @@
   },
   "author": "aamiaa",
   "dependencies": {
-    "sharp": "^0.34.3-rc.0"
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.1"
